# shewchuk

./: .bumpversion.cfg  .coveragerc  .env  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  run-tests.ps1  run-tests.sh  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst  requirements.txt
shewchuk/: __init__.py  __init__.pyi  _py.py  _shewchuk.py
src/: shewchuk.c
tests/: conftest.py  test_incircle_test.py  test_kind.py  test_orientation.py  test_vectors_cross_product.py  test_vectors_dot_product.py  utils.py
tests/expansion_tests/: strategies.py  test_abs.py  test_add.py  test_as_integer_ratio.py  test_bool.py  test_ceil.py  test_eq.py  test_float.py  test_floor.py  test_floordiv.py  test_ge.py  test_gt.py  test_hash.py  test_imag.py  test_incircle_test.py  test_initialization.py  test_kind.py  test_le.py  test_lt.py  test_mod.py  test_mul.py  test_new.py  test_orientation.py  test_pickle.py  test_pow.py  test_radd.py  test_real.py  test_repr.py  test_rfloordiv.py  test_rmod.py  test_rmul.py  test_round.py  test_rsub.py  test_rtruediv.py  test_sub.py  test_truediv.py  test_trunc.py  test_vectors_cross_product.py
tests/strategies/: __init__.py  base.py
